--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-2.38MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇺🇸 美国-855.1KB/s(Youtube:不良林), server: 167.88.63.79, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1010.5KB/s(Youtube:不良林), server: 167.88.63.79, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-828.9KB/s(Youtube:不良林), server: 167.88.63.79, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-849.5KB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-442.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇸🇬 新加坡-715.8KB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-304.9KB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-883.8KB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-723.2KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 167.88.61.175, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: 167.88.61.175, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-974.9KB/s(Youtube:不良林), server: 167.88.63.79, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-713.9KB/s(Youtube:不良林), server: 167.88.61.175, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: 167.88.63.79, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-634.6KB/s(Youtube:不良林), server: 167.88.61.175, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇦🇺 澳大利亚-946.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-855.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-849.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-715.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-974.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-946.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-855.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-849.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-715.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-974.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-946.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-855.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-849.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-715.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-974.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-946.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-855.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-849.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-715.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-974.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-946.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-855.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-849.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-715.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-974.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-946.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-855.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-849.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-715.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-974.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-946.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-855.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1010.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-849.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-715.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-304.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-883.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-723.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-974.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-634.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-946.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
