--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-925.0KB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 167.88.61.175, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 167.88.63.79, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-1.00MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.05MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.11MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-962.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.83MB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1002.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-10.35MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.03MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-226.6KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-548.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.15MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.02MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-398.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇸🇬 新加坡-761.4KB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-925.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-548.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-761.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-925.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-548.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-761.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-925.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-548.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-761.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-10.35MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-925.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-548.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-761.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-925.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-548.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-761.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-925.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-548.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-761.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-925.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1002.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-226.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-548.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-761.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
